<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoPokemon">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="440dp"
        android:layout_height="61dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="#FEFEFE"
        app:titleTextColor="#FEFEFE" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="143dp"
        android:layout_height="21dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="8dp"
        android:background="#DE9D9D"
        android:text="@string/Pokemon_S"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="177dp"
        android:layout_height="21dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="17dp"
        android:background="#DE9D9D"
        android:text="@string/Pokemon_S_N"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="43dp"
        android:layout_height="21dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="26dp"
        android:background="#6CC570"
        android:text="@string/Type_P"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="152dp"
        android:layout_height="19dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="29dp"
        android:background="#6CC570"
        android:text="@string/Type_P_V"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="31dp"
        android:background="#84C1F1"
        android:text="@string/Weight_P"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="475dp"
        android:background="#F8805A"
        android:text="@string/Size_P"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="161dp"
        android:layout_height="23dp"
        android:layout_marginStart="151dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="27dp"
        android:background="#84C1F1"
        android:text="@string/Weight_P_V"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="144dp"
        android:layout_height="23dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="471dp"
        android:background="#F8805A"
        android:text="@string/Size_P_V"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="333dp"
        android:text="@string/search_webB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="258dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />
</androidx.constraintlayout.widget.ConstraintLayout>